# totoro-ai

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  railpack.toml  railway.toml
.claude/: constitution.md  settings.local.json  workflows.md
.claude/commands/: speckit.specify.md
.claude/rules/: architecture.md  claude-md-structure.md  git.md
.specify/memory/: constitution.md
alembic/: env.py
alembic/versions/: 17f868e70c2c_make_interactions_place_id_nullable_.py  2d4472dd48a1_add_user_memories_table.py  5d579fed8509_rename_consult_logs_to_recommendations.py  69cb7399_taste_model_add_confidence_and_interaction_count.py  69cb739a_create_interaction_log_table.py  94b9f036ae64_add_ambiance_to_places.py  9a1c7b54e2f0_places_service_schema.py  a1b2c3d4e5f6_add_extraction_metadata_to_places.py  a1b2c3d4e5f6_places_search_vector_generated_column.py  a2b3c4d5e6f7_drop_consult_logs_feedback_columns.py  a7c3d2e9f4b1_chip_confirm_and_interaction_metadata.py  b3c4d5e6f7a8_add_unique_constraint_embeddings_place_id.py  b825af502e7b_add_consult_logs_table.py  c7e3a8d12b90_places_search_vector_generated_column.py  (+6 more)
config/: .env.example  .local.yaml.example  app.yaml  models.yaml
docs/: agent-tool-design.md  api-contract.md  architecture.md  decisions.md  extract-place-code-flow.md  extraction-cascade-integration.md  poi-dataset-comparison.md  taste-model-architecture.md  taste-model.md
migrations/: env.py
scripts/: bench_extraction.py  init-db.sql  seed_migration.py
tests/: conftest.py  test_health.py
(+457 files in other folders)
