[tool.poetry]
name = "totoro-ai"
version = "0.1.0"
description = "AI engine for Totoro — intent parsing, place extraction, ranking, taste modeling"
authors = ["Saher"]
packages = [{include = "totoro_ai", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = "^0.115"
uvicorn = {version = "^0.34", extras = ["standard"]}
pydantic = "^2.10"
pydantic-settings = "^2.7"
langchain = "^0.3"
langchain-openai = "^0.3"
langchain-anthropic = "^0.3"
langgraph = "^0.3"
voyageai = "^0.3"
pyyaml = "^6.0"
sqlalchemy = {version = "^2.0", extras = ["asyncio"]}
symspellpy = "^6.7"
asyncpg = "^0.30"
alembic = "^1.14"
pgvector = "^0.3"
redis = {version = "^5.0", extras = ["asyncio"]}
greenlet = "^3.3.2"
instructor = "^1.0"
httpx = "^0.28"
langfuse = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.25"
ruff = "^0.9"
mypy = "^1.14"
types-pyyaml = "^6.0.12.20250915"
psycopg2-binary = "^2.9.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "langfuse"
ignore_missing_imports = true
